--- a/package.json
+++ b/package.json
@@ -12,5 +12,11 @@
   "devDependencies": {
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.3"
+  },
+  "dependencies": {
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
+    "sun-tzu-quotes": "^1.0.0",
+    "twitter-api-v2": "^1.12.2"
   }
 }
